# python-project-52

./: .env.sample  .gitignore  Makefile  README.md  build.sh  db.sqlite3  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: project4-test.yml
task_manager/: forms.py  mixins.py  parser.py  settings.py  urls.py  views.py  wsgi.py
task_manager/fixtures/: data_dump.json  labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_rename_timestamp_labels_created_at.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_rename_timestamp_statuses_created_at.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_tasks_author_alter_tasks_executor.py  0003_rename_timestamp_tasks_created_at.py  0004_alter_tasks_created_at.py
task_manager/templates/: create.html  delete.html  index.html  layout.html  login.html  messages.html  navigation.html  update.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  index.html  show.html  update.html
task_manager/templates/users/: create.html  (+3 more)
task_manager/users/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
(+3 files in other folders)
