[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Konstantin Lugovskikh <kostya.lugovskikh@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.1"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"
django-bootstrap5 = "^23.4"
django-filter = "^23.5"
rollbar = "^0.16.3"
dj-database-url = "^2.1.0"
pymysql = "^1.1.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
